# crypto-price-tracker

./: .env.example  README.md  pyproject.toml
api/: index.py
app/: config.py  logger.py  main.py
app/interfaces/: cli.py  web.py
app/scheduler/: monitor.py
app/services/: alert_service.py  email_service.py  price_service.py
